@@ -586,4 +586,13 @@ stops_edit;Modify
 stops_add_desc;Add Stops information
 stops_edit_desc;Modify Stops information
 
+decision_positiononquote_cash;Cash Position on %s
+decision_positiononquote_credit;SDR Position on %s
+decision_purchasingpower;Purchasing Power
+decision_numofshares;Number of shares :
+decision_upp;Price Paid per Share :
+decision_pp;Total Price Paid :
+decision_profit;Latent Profit in %s :
+decision_profitpercent;Latent Profit in % :
+
 test;test message
